# netzer

./: CMakeLists.txt  README.md
.github/workflows/: cmake_build.yml  cmake_build_windows.yml
include/netzer/: Connection.hpp  Serial.hpp  Timer.hpp  define_class_ptr.hpp  http.hpp  networking.hpp
src/: CMakeLists.txt  Serial.cpp  Timer.cpp  http.cpp  networking.cpp
tests/: CMakeLists.txt
